- Decouple firebase package and user creation service by introducing and interface - implement user service test cases
