# internal/dto/credentials.go
@@ -1,10 +1,0 @@
-package dto
-
-type Credentials struct {
-	Phone_number string `form:"phone_number"`
-	Password     string `form:"password"`
-}
-
-type JWT struct {
-	Token string `json:"token"`
-}
