# internal/dto/response.go
@@ -1,5 +1,7 @@
 package dto
 
+import "github.com/kimbasn/printly/internal/entity"
+
 // ErrorResponse represents a standard error response format for API calls.
 // It's used to provide a consistent structure for error messages.
 type ErrorResponse struct {
@@ -12,3 +14,11 @@ type SuccessResponse struct {
 	Message string `json:"message" example:"Operation completed successfully"`
 }
 
+type UserResponse struct {
+	UID       string      `json:"uid"`
+	FirstName string      `json:"first_name"`
+	LastName  string      `json:"last_name"`
+	Email     string      `json:"email"`
+	Role      entity.Role `json:"role"`
+	Disabled  bool        `json:"disabled"`
+}
